tweaked alias and readme

--- a/wayfire.ini
+++ b/wayfire.ini
@@ -34,13 +34,13 @@ command_screenshot_interactive = slurp | grim -g - ~/media/photos/screenshots/$(
 
 [core]
 plugins = alpha animate autostart autostart-static command pixdecor expo fast-switcher grid idle invert move oswitch place resize switcher vswitch window-rules wm-actions background-view blur decoration follow-focus foreign-toplevel ipc ipc-rules join_views mag scale shortcuts-inhibit water wf-info winshadows winzoom workspace-names wsets zoom wobbly 
-# simple-tile
-plugins_nogl = alpha animate autostart autostart-static command pixdecor expo fast-switcher grid idle move oswitch place resize switcher vswitch window-rules wm-actions
+# simple-tile 
+plugins_nogl = alpha animate autostart autostart-static command pixdecor expo fast-switcher grid idle move oswitch place resize switcher vswitch window-rules wm-actions background-view blur decoration follow-focus foreign-toplevel ipc ipc-rules join_views mag scale shortcuts-inhibit water wf-info winshadows winzoom workspace-names wsets zoom wobbly 
 xwayland = true
 only_decorate_gtk = true
 focus_button_with_modifiers = false
 focus_buttons = BTN_LEFT | BTN_MIDDLE | BTN_RIGHT
-focus_buttons_passthrough = true
+# focus_buttons_passthrough = true
 max_render_time = -1
 transaction_timeout = 100
 # Workspaces arranged into a 3x3 grid
@@ -64,7 +64,7 @@ slot_l = <super> <shift> KEY_H | <alt> KEY_H
 slot_c = <super> <shift> KEY_K | <alt> KEY_K
 slot_r = <super> <shift> KEY_L | <alt> KEY_L
 restore = <super> <shift> KEY_J | <alt> KEY_J
-mouse_snap = false
+mouse_snap = true
 duration = 300
 type = crossfade
 
@@ -107,8 +107,8 @@ prev_view = <super> <shift> KEY_TAB
 
 [scale]
 # Show current windows exploded on current workspace (X) or entire desktop (Z), traverse with arrow keys
-toggle = <super> KEY_X
-toggle_all = <super> KEY_Z
+toggle = <super> KEY_G
+toggle_all = <super> KEY_A
 allow_zoom = false
 # bg_color = \#1A1A1AE6
 duration = 400
@@ -131,20 +131,20 @@ overlay = true
 share_filter = false
 text_color = \#CCCCCCCC
 
-#[simple-tile]
-#keep_fullscreen_on_adjacent = true
-#Break a tile into its own window, to maximize and on
-#key_toggle = <super> KEY_I
-#button_move = <super> BTN_LEFT
-#button_resize = <super> BTN_RIGHT
-#inner_gap_size = 5
-#outer_horiz_gap_size = 0
-#outer_vert_gap_size = 0
-# default = all
-#key_focus_above = <super> <alt> KEY_K
-#key_focus_below = <super> <alt> KEY_J
-#key_focus_left = <super> <alt> KEY_H | <super> KEY_U
-#key_focus_right = <super> <alt> KEY_L | <super> KEY_P
+# [simple-tile]
+# keep_fullscreen_on_adjacent = true
+# #Break a tile into its own window and toggle maximize
+# key_toggle = <super> KEY_I
+# button_move = <super> BTN_LEFT
+# button_resize = <super> BTN_RIGHT
+# inner_gap_size = 5
+# outer_horiz_gap_size = 5
+# outer_vert_gap_size = 5
+# # default = all
+# key_focus_above = <super> <alt> KEY_K
+# key_focus_below = <super> <alt> KEY_J
+# key_focus_left = <super> <alt> KEY_H | <super> KEY_U
+# key_focus_right = <super> <alt> KEY_L | <super> KEY_P
 
 [window-rules]
 # https://github.com/WayfireWM/wayfire/wiki/Configuration#window-rules
@@ -152,14 +152,16 @@ text_color = \#CCCCCCCC
 # $ WAYLAND_DEBUG=1 alacritty 2>&1 | kak
 maximize_alacritty = on created if app_id is "Alacritty" then maximize
 maximize_lxterminal= on created if app_id is "lxterminal" then maximize
-rule_001 = on created if app_id is "lxterminal" then set alpha 0.5
-rule_002 = on created if app_id is "Alacritty" then set alpha 0.5
+rule_001 = on created if app_id is "lxterminal" then set alpha 0.6
+rule_002 = on created if app_id is "Alacritty" then set alpha 0.6
 rule_003= on created if app_id is "firefox" then maximize
-rule_004= on created if app_id is "firefox" then set alpha 0.6
+rule_004= on created if app_id is "firefox" then set alpha 0.7
 rule_005= on created if app_id is "firefox" then assign_workspace 1 1
-rule_006= on created if app_id is "brave-browser-beta" then set alpha 1.0
-rule_007= on created if app_id is "brave-browser-beta" then assign_workspace 1 0
-# rule_008= on created if app_id is "brave-browser-beta" then move 270 70
+rule_006 = on created if app_id is "imager" then move 280 70
+rule_007 = on created if app_id is "imager" then set alpha 1.0
+rule_008 = on created if app_id is "imager" then assign_workspace 1 0
+# rule_018= on created if app_id is "brave-browser-beta" then move 270 70
+rule_021 = on created if app_id is "calculator" then set geometry 270 820 800 500
 
 # Mouse bindings ───────────────────────────────────────────────────────────────
 
@@ -230,7 +232,7 @@ toggle = none
 
 # Show an overview of all workspaces.
 [expo]
-toggle = <super> KEY_A | hotspot left-top 10x10 200
+toggle = <super> KEY_E | hotspot left-top 10x10 200
 # Drag a window into a different workpace with mouse left-button
 # Select a workspace.
 select_workspace_1 = KEY_1
@@ -242,11 +244,11 @@ select_workspace_6 = KEY_6
 select_workspace_7 = KEY_7
 select_workspace_8 = KEY_8
 select_workspace_9 = KEY_9
-duration = 700
+duration = 300
 inactive_brightness = 0.600000
 keyboard_interaction = true
 offset = 10
-transition_length = 500
+transition_length = 300
 
 [scale-title-filter]
 bg_color = \#00000080
@@ -275,9 +277,9 @@ text_color = \#CCCCCCCC
 all_dialogs_modal = true
 app_id_mode = full
 dynamic_repaint_delay = false
-enable_so_unloading = false
+nlenable_so_unloading = false
 force_preferred_decoration_mode = false
-remove_output_limits = false
+# remove_output_limits = false
 use_external_output_configuration = false
 
 [workspace-names]
@@ -293,8 +295,8 @@ text_color = \#FFFFFFFF
 [place]
 mode = random
 
-[preserve-output]
-last_output_focus_timeout = 10000
+# [preserve-output]
+# last_output_focus_timeout = 10000
 
 [decoration]
 title_height =  0
@@ -309,7 +311,7 @@ timeout = 1000
 
 [follow-focus]
 change_output = true
-change_view = true
+# change_view = true
 focus_delay = 50
 raise_on_top = true
 threshold = 10
