add cube and wrot plugins, readme update

--- a/wayfire.ini
+++ b/wayfire.ini
@@ -33,9 +33,9 @@ binding_screenshot_interactive = <alt> KEY_SYSRQ | <alt> KEY_PRINT
 command_screenshot_interactive = slurp | grim -g - ~/media/photos/screenshots/$(date "+%Y-%m-%d-%H:%M").webp
 
 [core]
-plugins = alpha animate autostart autostart-static command pixdecor expo fast-switcher grid idle invert move oswitch place resize switcher vswitch window-rules wm-actions background-view blur decoration follow-focus foreign-toplevel ipc ipc-rules join_views mag scale shortcuts-inhibit water wf-info winshadows winzoom workspace-names wsets zoom wobbly 
+plugins = alpha animate autostart autostart-static command pixdecor expo fast-switcher grid idle invert move oswitch place resize switcher vswitch window-rules wm-actions background-view blur cube decoration follow-focus foreign-toplevel ipc ipc-rules join_views mag scale shortcuts-inhibit water wf-info winshadows winzoom wobbly workspace-names wrot wsets zoom 
 # simple-tile 
-plugins_nogl = alpha animate autostart autostart-static command pixdecor expo fast-switcher grid idle move oswitch place resize switcher vswitch window-rules wm-actions background-view blur decoration follow-focus foreign-toplevel ipc ipc-rules join_views mag scale shortcuts-inhibit water wf-info winshadows winzoom workspace-names wsets zoom wobbly 
+plugins_nogl = alpha animate autostart autostart-static command pixdecor expo fast-switcher grid idle move oswitch place resize switcher vswitch window-rules wm-actions background-view blur cube decoration follow-focus foreign-toplevel ipc ipc-rules join_views mag scale shortcuts-inhibit water wf-info winshadows winzoom wobbly workspace-names wrot wsets zoom 
 xwayland = true
 only_decorate_gtk = true
 focus_button_with_modifiers = false
@@ -211,25 +211,6 @@ next_output = <super> KEY_O
 # Same with the window.
 next_output_with_win = <super> <shift> KEY_O
 
-[idle]
-# -1 is disabled or set with number of seconds
-# screensaver_timeout = -1
-screensaver_timeout = 300
-dpms_timeout = -1
-# dpms setting will turn off your display after a further number of seconds.
-# On Pi this move all windows to workspace 0 0 (or 1)
-# Disable the compositor from going idle with Super + z.
-toggle = <super> <shift> KEY_Z
-cube_max_zoom = 1.500000
-cube_rotate_speed = 1.000000
-cube_zoom_speed = 1000
-disable_on_fullscreen = false
-disable_initially = false
-
-# Invert the colors of the whole output.
-[invert]
-toggle = none
-
 # Show an overview of all workspaces.
 [expo]
 toggle = <super> KEY_E | hotspot left-top 10x10 200
@@ -249,6 +230,51 @@ inactive_brightness = 0.600000
 keyboard_interaction = true
 offset = 10
 transition_length = 300
+
+# -1 is disabled or set with number of seconds
+# dpms setting will turn off your display after a further number of seconds.
+# screensaver_timeout = -1
+screensaver_timeout = 300
+dpms_timeout = -1
+toggle = <super> <shift> KEY_Z
+cube_max_zoom = 1.500000
+cube_rotate_speed = 1.000000
+cube_zoom_speed = 1000
+disable_on_fullscreen = false
+disable_initially = false
+
+# Switch to the next or previous workspace on the row with cube animation. 
+# Also used as screensaver.
+[cube]
+rotate_left = <super> <alt> KEY_H
+rotate_right = <super> <alt> KEY_L
+# activate = <alt> <ctrl> BTN_LEFT 
+background = \#1A1A1AFF
+background_mode = simple
+cubemap_image =
+deform = 1
+initial_animation = 350
+light = true
+skydome_mirror = true
+skydome_texture = 
+speed_spin_horiz = 0.020000
+speed_spin_vert = 0.020000
+speed_zoom = 0.070000
+zoom = 0.100000
+
+# rotate the window on a vertical axis
+[wrot]
+activate = <super> <ctrl> BTN_RIGHT
+activate-3d = <super> <shift> BTN_RIGHT
+invert = false
+reset = <super> <ctrl> KEY_R
+reset-one = <super> <shift> KEY_R
+reset_radius = 25.000000
+sensitivity = 24
+
+# Invert the colors of the whole output.
+[invert]
+toggle = <super> <shift> KEY_I
 
 [scale-title-filter]
 bg_color = \#00000080
@@ -353,3 +379,15 @@ kawase_offset = 2.000000
 saturation = 1.000000
 toggle = none
  
+# [background-view]
+# file = 
+# inhibit_input = true
+
+# [bench]
+# average_frames = 25
+# position = top_center
+
+# [crosshair]
+# line_color = \#FF0000FF
+# line_width = 2
+
