keybinds, change default udevmon.yaml

--- a/wayfire.ini
+++ b/wayfire.ini
@@ -107,7 +107,7 @@ prev_view = <super> <shift> KEY_TAB
 
 [scale]
 # Show current windows exploded on current workspace (X) or entire desktop (Z), traverse with arrow keys
-toggle = <super> KEY_G
+toggle = <super> KEY_Z
 toggle_all = <super> KEY_A
 allow_zoom = false
 # bg_color = \#1A1A1AE6
@@ -213,7 +213,7 @@ next_output_with_win = <super> <shift> KEY_O
 
 # Show an overview of all workspaces.
 [expo]
-toggle = <super> KEY_E | hotspot left-top 10x10 200
+toggle = <super> KEY_G | hotspot left-top 10x10 200
 # Drag a window into a different workpace with mouse left-button
 # Select a workspace.
 select_workspace_1 = KEY_1
@@ -246,8 +246,8 @@ disable_initially = false
 # Switch to the next or previous workspace on the row with cube animation. 
 # Also used as screensaver.
 [cube]
-rotate_left = <super> <alt> KEY_H
-rotate_right = <super> <alt> KEY_L
+rotate_left = <super> <alt> KEY_H | <super> KEY_N
+rotate_right = <super> <alt> KEY_L | <super> KEY_M
 # activate = <alt> <ctrl> BTN_LEFT 
 background = \#1A1A1AFF
 background_mode = simple
