--- a/interception-tools/udevmon.yaml
+++ b/interception-tools/udevmon.yaml
@@ -1,11 +1,5 @@
-- JOB: intercept -g $DEVNODE | caps2esc -m 1 | space2meta | s2arrows | uinput -d $DEVNODE
+- JOB: intercept -g $DEVNODE | caps2esc -m 1 | space2meta | uinput -d $DEVNODE
   DEVICE:
     EVENTS:
-      EV_KEY: [KEY_CAPSLOCK, KEY_ESC, KEY_SPACE, KEY_S, KEY_H, KEY_J, KEY_K, KEY_L,
-               KEY_LEFT, KEY_DOWN, KEY_UP, KEY_RIGHT ]
+      EV_KEY: [KEY_CAPSLOCK, KEY_ESC, KEY_SPACE]
    
-
-
-
-
-      
