config tweak, mv s2arrows to etras in readme

--- a/wayfire.ini
+++ b/wayfire.ini
@@ -35,7 +35,8 @@ command_screenshot_interactive = slurp | grim -g - ~/media/photos/screenshots/$(
 [core]
 plugins = alpha animate autostart autostart-static command pixdecor expo fast-switcher grid idle invert move oswitch place resize switcher vswitch window-rules wm-actions background-view blur cube decoration follow-focus foreign-toplevel ipc ipc-rules join_views mag scale shortcuts-inhibit water wf-info winshadows winzoom wobbly workspace-names wrot wsets zoom 
 # simple-tile 
-plugins_nogl = alpha animate autostart autostart-static command pixdecor expo fast-switcher grid idle move oswitch place resize switcher vswitch window-rules wm-actions background-view blur cube decoration follow-focus foreign-toplevel ipc ipc-rules join_views mag scale shortcuts-inhibit water wf-info winshadows winzoom wobbly workspace-names wrot wsets zoom 
+plugins_nogl = alpha animate autostart autostart-static command pixdecor fast-switcher grid idle move oswitch place resize switcher vswitch window-rules wm-actions background-view blur cube decoration follow-focus foreign-toplevel ipc ipc-rules join_views mag scale shortcuts-inhibit water wf-info winshadows winzoom wobbly workspace-names wrot wsets zoom 
+# expo
 xwayland = true
 only_decorate_gtk = true
 focus_button_with_modifiers = false
@@ -106,7 +107,9 @@ next_view = <super> KEY_TAB
 prev_view = <super> <shift> KEY_TAB
 
 [scale]
-# Show current windows exploded on current workspace (X) or entire desktop (Z), traverse with arrow keys
+# Show current windows exploded on current workspace (Z) or entire desktop (A), 
+# cycle through windows with arrow keys, 
+# or with wm-actions.send_to_back a.k.a. <super> KEY_S | <super> KEY_B
 toggle = <super> KEY_Z
 toggle_all = <super> KEY_A
 allow_zoom = false
@@ -211,10 +214,11 @@ next_output = <super> KEY_O
 # Same with the window.
 next_output_with_win = <super> <shift> KEY_O
 
-# Show an overview of all workspaces.
 [expo]
-toggle = <super> KEY_G | hotspot left-top 10x10 200
+# Show an overview of all workspaces.
 # Drag a window into a different workpace with mouse left-button
+toggle = <super> KEY_E | KEY_G
+# toggle = <super> KEY_E | hotspot left-top 10x10 200
 # Select a workspace.
 select_workspace_1 = KEY_1
 select_workspace_2 = KEY_2
