fixed idle error

--- a/wayfire.ini
+++ b/wayfire.ini
@@ -216,7 +216,7 @@ next_output_with_win = <super> <shift> KEY_O
 [expo]
 # Show an overview of all workspaces.
 # Drag a window into a different workpace with mouse left-button
-toggle = <super> KEY_E | KEY_G
+toggle = <super> KEY_E | <super> KEY_G
 # toggle = <super> KEY_E | hotspot left-top 10x10 200
 # Select a workspace.
 select_workspace_1 = KEY_1
@@ -234,10 +234,11 @@ keyboard_interaction = true
 offset = 10
 transition_length = 300
 
+[idle]
 # -1 is disabled or set with number of seconds
-# dpms setting will turn off your display after a further number of seconds.
 # screensaver_timeout = -1
 screensaver_timeout = 300
+# dpms setting will turn off your display after a further number of seconds.
 dpms_timeout = -1
 toggle = <super> <shift> KEY_Z
 cube_max_zoom = 1.500000
