--- a/wayfire.ini
+++ b/wayfire.ini
@@ -1,6 +1,6 @@
 # Raspberry Pi OS (Bookworm) config for Pi4 & Pi5 
-# Inspired by https://github.com/bluebyt/Wayfire-dots and that of CatchyOS
-# Author: Briain O'Dricoll https://github.com/gnmearacaun/rpios-wayfirewmj
+# Inspired by https://github.com/bluebyt/Wayfire-dots and CatchyOS config
+# Git blame: Briain O'Dricoll https://github.com/gnmearacaun/rpios-wayfirewm-config
 
 #───────────────────────────────────────────────────────────────
 [command]
@@ -23,7 +23,7 @@ binding_quit = <ctrl> <alt> KEY_DELETE
 command_quit = lxde-pi-shutdown-helper
 binding_power = KEY_POWER
 command_power = pwrkey
-binding_terminal = <super> KEY_ENTER
+binding_terminal = <super> KEY_ENTER | <super> KEY_N
 command_terminal = alacritty
 binding_changewallpaper = <super> KEY_W
 command_changewallpaper = find -L $HOME/media/photos/wallpapers -type f | sort -R | head -n 1 | xargs swaybg --image
@@ -38,77 +38,105 @@ plugins = alpha animate autostart autostart-static command pixdecor expo fast-sw
 plugins_nogl = alpha animate autostart autostart-static command pixdecor expo fast-switcher grid idle move oswitch place resize switcher vswitch window-rules wm-actions background-view blur cube decoration follow-focus foreign-toplevel ipc ipc-rules join_views mag scale shortcuts-inhibit water wf-info winshadows winzoom wobbly workspace-names wrot wsets zoom 
 xwayland = true
 only_decorate_gtk = true
+# focus_buttons_passthrough = true
 focus_button_with_modifiers = false
 focus_buttons = BTN_LEFT | BTN_MIDDLE | BTN_RIGHT
-# focus_buttons_passthrough = true
 max_render_time = -1
 transaction_timeout = 100
+
 # Workspaces arranged into a 3x3 grid
 vwidth = 3
 vheight = 3
 
+# Screensaver ──────────────────────────────────────────────────────────────────────
+
+[idle]
+# -1 is disabled or set number of seconds
+# screensaver_timeout = -1
+screensaver_timeout = 120
+# Cuts power to display 
+# dpms_timeout = -1
+dpms_timeout = 240
+toggle = <super> <shift> KEY_Z
+cube_max_zoom = 1.500000
+cube_rotate_speed = 1.000000
+cube_zoom_speed = 1000
+disable_on_fullscreen = false
+disable_initially = false
+
 # Windows ──────────────────────────────────────────────────────────────────────
-[wm-actions]
+
+## Alt-Esc is the default binding for moving between windows/tiles
+
 # Actions related to window management functionalities.
+[wm-actions]
 toggle_maximize = <super> KEY_F
 toggle_fullscreen = <super> <shift> KEY_F
 toggle_showdesktop = <super> <shift> KEY_D
 toggle_always_on_top = <super> KEY_Y
 toggle_sticky = <super> <shift> KEY_Y
-# Quickly cycle between applications, may need to press it an extra time to regain focus 
+# Quickly cycle between applications withought animation
+# May need to press it an extra times, seems to cycle through entire row
 send_to_back = <super> KEY_S | <super> KEY_B
 
-[grid]
 # Position the windows as tiles; left, center or right
-slot_l = <super> <shift> KEY_H | <alt> KEY_H
-slot_c = <super> <shift> KEY_K | <alt> KEY_K
-slot_r = <super> <shift> KEY_L | <alt> KEY_L
-restore = <super> <shift> KEY_J | <alt> KEY_J
+[grid]
+slot_l = <alt> KEY_H
+slot_c = <alt> KEY_K
+slot_r = <alt> KEY_L
+restore = <alt> KEY_J
 mouse_snap = true
 duration = 300
 type = crossfade
 
-# Alt-Esc default binding for moving between windows/tiles
+# Cycle through windows on curent workspace
+[switcher]
+next_view = <super> KEY_TAB
+prev_view = <super> <shift> KEY_TAB
+
+# https://github.com/WayfireWM/wayfire/wiki/Configuration#window-rules
+[window-rules]
+maximize_alacritty = on created if app_id is "Alacritty" then maximize
+maximize_lxterminal= on created if app_id is "lxterminal" then maximize
+rule_001 = on created if app_id is "lxterminal" then set alpha 0.6
+rule_002 = on created if app_id is "Alacritty" then set alpha 0.6
+rule_003= on created if app_id is "firefox" then maximize
+rule_004= on created if app_id is "firefox" then set alpha 0.7
+rule_005= on created if app_id is "firefox" then assign_workspace 1 1
+# rule_018= on created if app_id is "brave-browser-beta" then move 270 70
+rule_021 = on created if app_id is "calculator" then set geometry 270 820 800 500
 
 # Workspaces ───────────────────────────────────────────────────────────────────
+
+# Switch workspaces
 [vswitch]
-# Switch to workspace.
 binding_left = <super> KEY_H
 binding_down = <super> KEY_J
 binding_up = <super> KEY_K
 binding_right = <super> KEY_L
 wraparound = false
-# TODO
-# binding_last =
-# duration = 300
-# gap = 20
-# send_win_down =
-# send_win_last =
-# send_win_left =
-# send_win_right =
-# send_win_up =
-# with_win_last =
-# move to a workspace directly, doesn't work so far
-#binding_0 = <super> KEY_0
-#binding_1 = <super> KEY_1
-#binding_2 = <super> KEY_2
-#binding_3 = <super> KEY_3
-#binding_4 = <super> KEY_4
-#binding_5 = <super> KEY_5
-#binding_6 = <super> KEY_6
-#binding_7 = <super> KEY_7
-#binding_8 = <super> KEY_8
-#binding_9 = <super> KEY_9
 
-[switcher]
-# Cycle through windows on workspae
-next_view = <super> KEY_TAB
-prev_view = <super> <shift> KEY_TAB
+# Switch workspaces on same row with cube animation. 
+[cube]
+rotate_left = <super> KEY_M
+rotate_right = <super> KEY_COMMA
+# activate = <alt> <ctrl> BTN_LEFT 
+background = \#1A1A1AFF
+background_mode = simple
+cubemap_image =
+deform = 1
+initial_animation = 350
+light = true
+skydome_mirror = true
+skydome_texture = 
+speed_spin_horiz = 0.020000
+speed_spin_vert = 0.020000
+speed_zoom = 0.070000
+zoom = 0.100000
 
+# Show windows of current workspace or entire desktop
 [scale]
-# Show current windows exploded on current workspace (Z) or entire desktop (A), 
-# cycle through windows with arrow keys, 
-# or with wm-actions.send_to_back a.k.a. <super> KEY_S | <super> KEY_B
+# Cycle through windows with arrow keys or wm-actions.send_to_back
 toggle = <super> KEY_Z
 toggle_all = <super> KEY_A
 allow_zoom = false
@@ -125,100 +153,11 @@ title_font_size = 22
 title_overlay = all
 title_position = center
 
-[scale-title-filter]
-bg_color = \#00000080
-case_sensitive = false
-font_size = 30
-overlay = true
-share_filter = false
-text_color = \#CCCCCCCC
-
-# [simple-tile]
-# keep_fullscreen_on_adjacent = true
-# #Break a tile into its own window and toggle maximize
-# key_toggle = <super> KEY_I
-# button_move = <super> BTN_LEFT
-# button_resize = <super> BTN_RIGHT
-# inner_gap_size = 5
-# outer_horiz_gap_size = 5
-# outer_vert_gap_size = 5
-# # default = all
-# key_focus_above = <super> <alt> KEY_K
-# key_focus_below = <super> <alt> KEY_J
-# key_focus_left = <super> <alt> KEY_H | <super> KEY_U
-# key_focus_right = <super> <alt> KEY_L | <super> KEY_P
-
-[window-rules]
-# https://github.com/WayfireWM/wayfire/wiki/Configuration#window-rules
-# You can get the properties of your applications with the following command:
-# $ WAYLAND_DEBUG=1 alacritty 2>&1 | kak
-maximize_alacritty = on created if app_id is "Alacritty" then maximize
-maximize_lxterminal= on created if app_id is "lxterminal" then maximize
-rule_001 = on created if app_id is "lxterminal" then set alpha 0.6
-rule_002 = on created if app_id is "Alacritty" then set alpha 0.6
-rule_003= on created if app_id is "firefox" then maximize
-rule_004= on created if app_id is "firefox" then set alpha 0.7
-rule_005= on created if app_id is "firefox" then assign_workspace 1 1
-rule_006 = on created if app_id is "imager" then move 280 70
-rule_007 = on created if app_id is "imager" then set alpha 1.0
-rule_008 = on created if app_id is "imager" then assign_workspace 1 0
-# rule_018= on created if app_id is "brave-browser-beta" then move 270 70
-rule_021 = on created if app_id is "calculator" then set geometry 270 820 800 500
-
-# Mouse bindings ───────────────────────────────────────────────────────────────
-
-# Resize them with right mouse button + Super.
-[resize]
-activate = <super> BTN_RIGHT
-activate_preserve_aspect = none
-
-# Drag windows by holding down Super and left mouse button.
-[move]
-activate = <super> BTN_LEFT
-enable_snap = true
-enable_snap_off = true
-join_views = false
-preview_base_border = \#404080CC
-preview_base_color = \#8080FF80
-preview_border_width = 3
-quarter_snap_threshold = 50
-snap_off_threshold = 200
-snap_threshold = 10
-workspace_switch_after = -1
-
-# Zoom in the desktop by scrolling + Super.
-[zoom]
-modifier = <super>
-interpolation_method = 0
-smoothing_duration = 300
-speed = 0.010000
-
-# Change opacity by scrolling with Super + Alt.
-[alpha]
-modifier = <super> <alt>
-min_value = 0.100000
-
-[output]
-mode = auto
-#mode = 1920x1080@60.000000 # or just 1920x1080
-# Kanshi supports more dynamic configuration, like switching profiles based on connected outputs. See [tutorial](https://github.com/WayfireWM/wayfire/wiki/Tutorial)
-position = auto
-# try setting scale to 1.5 for larger fonts
-scale = 1.000000
-transform = normal
-
-[oswitch]
-# Switch to the next output.
-next_output = <super> KEY_O
-# Same with the window.
-next_output_with_win = <super> <shift> KEY_O
-
-[expo]
 # Show an overview of all workspaces.
+[expo]
 # Drag a window into a different workpace with mouse left-button
-toggle = <super> KEY_E | <super> KEY_G
-# toggle = <super> KEY_E | hotspot left-top 10x10 200
-# Select a workspace.
+toggle = <super> KEY_E | hotspot left-top 10x10 200
+# Select a workspace from the grid.
 select_workspace_1 = KEY_1
 select_workspace_2 = KEY_2
 select_workspace_3 = KEY_3
@@ -234,39 +173,45 @@ keyboard_interaction = true
 offset = 10
 transition_length = 300
 
-[idle]
-# -1 is disabled or set with number of seconds
-# screensaver_timeout = -1
-screensaver_timeout = 300
-# dpms setting will turn off your display after a further number of seconds.
-dpms_timeout = -1
-toggle = <super> <shift> KEY_Z
-cube_max_zoom = 1.500000
-cube_rotate_speed = 1.000000
-cube_zoom_speed = 1000
-disable_on_fullscreen = false
-disable_initially = false
+# Switch to the next output.
+[oswitch]
+next_output = <super> KEY_O
+next_output_with_win = <super> <shift> KEY_O
 
-# Switch to the next or previous workspace on the row with cube animation. 
-# Also used as screensaver.
-[cube]
-rotate_left = <super> <alt> KEY_H | <super> KEY_N
-rotate_right = <super> <alt> KEY_L | <super> KEY_M
-# activate = <alt> <ctrl> BTN_LEFT 
-background = \#1A1A1AFF
-background_mode = simple
-cubemap_image =
-deform = 1
-initial_animation = 350
-light = true
-skydome_mirror = true
-skydome_texture = 
-speed_spin_horiz = 0.020000
-speed_spin_vert = 0.020000
-speed_zoom = 0.070000
-zoom = 0.100000
+# Mouse bindings ───────────────────────────────────────────────────────────────
 
-# rotate the window on a vertical axis
+# Drag windows by holding down Super and left mouse button.
+[move]
+activate = <super> BTN_LEFT
+enable_snap = true
+enable_snap_off = true
+join_views = false
+preview_base_border = \#404080CC
+preview_base_color = \#8080FF80
+preview_border_width = 3
+quarter_snap_threshold = 50
+snap_off_threshold = 200
+snap_threshold = 10
+workspace_switch_after = -1
+
+# Resize them with right mouse button + Super.
+[resize]
+activate = <super> BTN_RIGHT
+activate_preserve_aspect = none
+
+# Change opacity by scrolling with Super + Alt.
+[alpha]
+modifier = <super> <alt>
+min_value = 0.100000
+
+# Zoom in the desktop by scrolling + Super.
+[zoom]
+modifier = <super>
+interpolation_method = 0
+smoothing_duration = 300
+speed = 0.010000
+
+# Rotate the window on a vertical axis
 [wrot]
 activate = <super> <ctrl> BTN_RIGHT
 activate-3d = <super> <shift> BTN_RIGHT
@@ -276,94 +221,9 @@ reset-one = <super> <shift> KEY_R
 reset_radius = 25.000000
 sensitivity = 24
 
-# Invert the colors of the whole output.
-[invert]
-toggle = <super> <shift> KEY_I
+# Effects  ───────────────────────────────────────────────────────────────
 
-[scale-title-filter]
-bg_color = \#00000080
-case_sensitive = false
-font_size = 30
-overlay = true
-share_filter = false
-text_color = \#CCCCCCCC
-
-# [input]
-# xkb_model = pc105
-# xkb_layout = gb
-# xkb_variant = altgr-intl
-# xkb_options = grp:alt_shift_toggle
-# xkb_rules = evdev
-# cursor_size = 24
-# cursor_theme = Graphite-dark-cursors
-# kb_capslock_default_state = false
-# kb_numlock_default_state = true
-# kb_repeat_delay = 400
-# kb_repeat_rate = 40
-
-# Misc  ───────────────────────────────────────────────────────────────
-
-[workarounds]
-all_dialogs_modal = true
-app_id_mode = full
-dynamic_repaint_delay = false
-nlenable_so_unloading = false
-force_preferred_decoration_mode = false
-# remove_output_limits = false
-use_external_output_configuration = false
-
-[workspace-names]
-background_color = \#333333B3
-background_radius = 30.000000
-display_duration = 500
-font = sans-serif
-margin = 0
-position = center
-show_option_names = false
-text_color = \#FFFFFFFF
-
-[place]
-mode = random
-
-# [preserve-output]
-# last_output_focus_timeout = 10000
-
-[decoration]
-title_height =  0
-active_color = 0.5 1 0.8 1
-inactive_color = 0.1 0.1 0.1 1
-#ignore_views = title contains "this_word"
-
-[focus-steal-prevent]
-cancel_keys = KEY_ENTER
-deny_focus_views = none
-timeout = 1000
-
-[follow-focus]
-change_output = true
-# change_view = true
-focus_delay = 50
-raise_on_top = true
-threshold = 10
-
-[wobbly]
-friction = 3.000000
-grid_resolution = 6
-spring_k = 8.000000
-
-[animate]
-# open_animation = zoom
-open_animation = fade
-close_animation = fade
-duration = 400
-enabled_for = (type equals "toplevel" | (type equals "x-or" & focusable equals true))
-fade_duration = 800
-fade_enabled_for = type equals "overlay"
-startup_duration = 600
-zoom_duration = 500
-zoom_enabled_for = none
-
-# Alert: blur consumes system resources
+# Alert: blur consumes some resources
 [blur]
 blur_by_default = type is "toplevel"
 # method is either bokeh, box, gaussian or kawase
@@ -382,7 +242,101 @@ kawase_iterations = 2
 kawase_offset = 2.000000
 saturation = 1.000000
 toggle = none
+
+[animate]
+# fade or zoom
+open_animation = fade
+close_animation = fade
+duration = 400
+enabled_for = (type equals "toplevel" | (type equals "x-or" & focusable equals true))
+fade_duration = 800
+fade_enabled_for = type equals "overlay"
+startup_duration = 600
+zoom_duration = 500
+zoom_enabled_for = none
+
+[wobbly]
+friction = 3.000000
+grid_resolution = 6
+spring_k = 8.000000
+
+# Misc  ───────────────────────────────────────────────────────────────
+
+[output]
+mode = auto
+#mode = 1920x1080@60.000000 # or just 1920x1080
+position = auto
+# try setting scale to 1.5 for larger fonts
+scale = 1.000000
+transform = normal
+
+[workarounds]
+all_dialogs_modal = true
+app_id_mode = full
+dynamic_repaint_delay = false
+nlenable_so_unloading = false
+force_preferred_decoration_mode = false
+# remove_output_limits = false
+use_external_output_configuration = false
+
+# Invert the colors of the whole output.
+[invert]
+toggle = <super> <shift> KEY_I
+
+[scale-title-filter]
+bg_color = \#00000080
+case_sensitive = false
+font_size = 30
+overlay = true
+share_filter = false
+text_color = \#CCCCCCCC
+
+[workspace-names]
+background_color = \#333333B3
+background_radius = 30.000000
+display_duration = 500
+font = sans-serif
+margin = 0
+position = center
+show_option_names = false
+text_color = \#FFFFFFFF
+
+[place]
+mode = random
+
+[decoration]
+title_height =  0
+active_color = 0.5 1 0.8 1
+inactive_color = 0.1 0.1 0.1 1
+#ignore_views = title contains "this_word"
+
+[focus-steal-prevent]
+cancel_keys = KEY_ENTER
+deny_focus_views = none
+timeout = 1000
+
+[follow-focus]
+change_output = true
+change_view = true
+focus_delay = 50
+raise_on_top = true
+threshold = 10
  
+# Unused  ───────────────────────────────────────────────────────────────
+
+# [input]
+# xkb_model = pc105
+# xkb_layout = gb
+# xkb_variant = altgr-intl
+# xkb_options = grp:alt_shift_toggle
+# xkb_rules = evdev
+# cursor_size = 24
+# cursor_theme = Graphite-dark-cursors
+# kb_capslock_default_state = false
+# kb_numlock_default_state = true
+# kb_repeat_delay = 400
+# kb_repeat_rate = 40
+
 # [background-view]
 # file = 
 # inhibit_input = true
@@ -395,3 +349,20 @@ toggle = none
 # line_color = \#FF0000FF
 # line_width = 2
 
+# [preserve-output]
+# last_output_focus_timeout = 10000
+
+# [simple-tile]
+# keep_fullscreen_on_adjacent = true
+# #Break a tile into its own window and toggle maximize
+# key_toggle = <super> KEY_I
+# button_move = <super> BTN_LEFT
+# button_resize = <super> BTN_RIGHT
+# inner_gap_size = 5
+# outer_horiz_gap_size = 5
+# outer_vert_gap_size = 5
+# # default = all
+# key_focus_above = <super> <alt> KEY_K
+# key_focus_below = <super> <alt> KEY_J
+# key_focus_left = <super> <alt> KEY_H | <super> KEY_U
+# key_focus_right = <super> <alt> KEY_L | <super> KEY_P
