--- a/wayfire.ini
+++ b/wayfire.ini
@@ -1,10 +1,11 @@
+#───────────────────────────────────────────────────────────────
 # Raspberry Pi OS (Bookworm) config for Pi4 & Pi5 
 # Inspired by https://github.com/bluebyt/Wayfire-dots and CatchyOS config
 # Git blame: Briain O'Dricoll https://github.com/gnmearacaun/rpios-wayfirewm-config
+#───────────────────────────────────────────────────────────────
 
-#───────────────────────────────────────────────────────────────
 [command]
-#───────────────────────────────────────────────────────────────
+
 repeatable_binding_volume_up = KEY_VOLUMEUP
 command_volume_up = wfpanelctl volumepulse volu
 repeatable_binding_volume_down = KEY_VOLUMEDOWN
@@ -270,6 +271,9 @@ position = auto
 scale = 1.000000
 transform = normal
 
+[preserve-output]
+last_output_focus_timeout = 10000
+
 [workarounds]
 all_dialogs_modal = true
 app_id_mode = full
@@ -348,9 +352,6 @@ threshold = 10
 # [crosshair]
 # line_color = \#FF0000FF
 # line_width = 2
-
-# [preserve-output]
-# last_output_focus_timeout = 10000
 
 # [simple-tile]
 # keep_fullscreen_on_adjacent = true
