--- a/wayfire.ini
+++ b/wayfire.ini
@@ -4,8 +4,22 @@
 # Git blame: Briain O'Dricoll https://github.com/gnmearacaun/rpios-wayfirewm-config
 #───────────────────────────────────────────────────────────────
 
-[command]
+[core]
+plugins = alpha animate autostart autostart-static command pixdecor expo fast-switcher grid idle invert move oswitch place resize switcher vswitch window-rules wm-actions background-view blur cube decoration follow-focus foreign-toplevel ipc ipc-rules join_views mag scale shortcuts-inhibit water wf-info winshadows winzoom wobbly workspace-names wrot wsets zoom 
+# simple-tile 
+plugins_nogl = alpha animate autostart autostart-static command pixdecor expo fast-switcher grid idle move oswitch place resize switcher vswitch window-rules wm-actions background-view blur cube decoration follow-focus foreign-toplevel ipc ipc-rules join_views mag scale shortcuts-inhibit water wf-info winshadows winzoom wobbly workspace-names wrot wsets zoom 
+xwayland = true
+only_decorate_gtk = true
+# focus_buttons_passthrough = true
+focus_button_with_modifiers = false
+focus_buttons = BTN_LEFT | BTN_MIDDLE | BTN_RIGHT
+max_render_time = -1
+transaction_timeout = 100
+# Workspaces arranged into a 3x3 grid
+vwidth = 3
+vheight = 3
 
+[command]
 repeatable_binding_volume_up = KEY_VOLUMEUP
 command_volume_up = wfpanelctl volumepulse volu
 repeatable_binding_volume_down = KEY_VOLUMEDOWN
@@ -33,22 +47,6 @@ command_screenshot = grim $HOME/media/photos/screenshots/$(date "+%Y-%m-%d-%H:%M
 binding_screenshot_interactive = <alt> KEY_SYSRQ | <alt> KEY_PRINT
 command_screenshot_interactive = slurp | grim -g - ~/media/photos/screenshots/$(date "+%Y-%m-%d-%H:%M").webp
 
-[core]
-plugins = alpha animate autostart autostart-static command pixdecor expo fast-switcher grid idle invert move oswitch place resize switcher vswitch window-rules wm-actions background-view blur cube decoration follow-focus foreign-toplevel ipc ipc-rules join_views mag scale shortcuts-inhibit water wf-info winshadows winzoom wobbly workspace-names wrot wsets zoom 
-# simple-tile 
-plugins_nogl = alpha animate autostart autostart-static command pixdecor expo fast-switcher grid idle move oswitch place resize switcher vswitch window-rules wm-actions background-view blur cube decoration follow-focus foreign-toplevel ipc ipc-rules join_views mag scale shortcuts-inhibit water wf-info winshadows winzoom wobbly workspace-names wrot wsets zoom 
-xwayland = true
-only_decorate_gtk = true
-# focus_buttons_passthrough = true
-focus_button_with_modifiers = false
-focus_buttons = BTN_LEFT | BTN_MIDDLE | BTN_RIGHT
-max_render_time = -1
-transaction_timeout = 100
-
-# Workspaces arranged into a 3x3 grid
-vwidth = 3
-vheight = 3
-
 # Screensaver ──────────────────────────────────────────────────────────────────────
 
 [idle]
@@ -67,8 +65,6 @@ disable_initially = false
 
 # Windows ──────────────────────────────────────────────────────────────────────
 
-## Alt-Esc is the default binding for moving between windows/tiles
-
 # Actions related to window management functionalities.
 [wm-actions]
 toggle_maximize = <super> KEY_F
@@ -76,9 +72,15 @@ toggle_fullscreen = <super> <shift> KEY_F
 toggle_showdesktop = <super> <shift> KEY_D
 toggle_always_on_top = <super> KEY_Y
 toggle_sticky = <super> <shift> KEY_Y
-# Quickly cycle between applications withought animation
-# May need to press it an extra times, seems to cycle through entire row
+# Switch between windows (without animation)
+# However, cycles through windows of all workspaces on row
 send_to_back = <super> KEY_S | <super> KEY_B
+## Alt-Esc is the default binding for moving between windows/tiles on a single workspace
+
+# Cycle through windows on curent workspace with animation
+[switcher]
+next_view = <super> KEY_TAB
+prev_view = <super> <shift> KEY_TAB
 
 # Position the windows as tiles; left, center or right
 [grid]
@@ -89,11 +91,6 @@ restore = <alt> KEY_J
 mouse_snap = true
 duration = 300
 type = crossfade
-
-# Cycle through windows on curent workspace
-[switcher]
-next_view = <super> KEY_TAB
-prev_view = <super> <shift> KEY_TAB
 
 # https://github.com/WayfireWM/wayfire/wiki/Configuration#window-rules
 [window-rules]
@@ -135,25 +132,6 @@ speed_spin_vert = 0.020000
 speed_zoom = 0.070000
 zoom = 0.100000
 
-# Show windows of current workspace or entire desktop
-[scale]
-# Cycle through windows with arrow keys or wm-actions.send_to_back
-toggle = <super> KEY_Z
-toggle_all = <super> KEY_A
-allow_zoom = false
-# bg_color = \#1A1A1AE6
-duration = 400
-inactive_alpha = 0.50000
-include_minimized = false
-interact = false
-middle_click_close = false
-minimized_alpha = 0.4000
-spacing = 50
-text_color = \#CCCCCCFF
-title_font_size = 22
-title_overlay = all
-title_position = center
-
 # Show an overview of all workspaces.
 [expo]
 # Drag a window into a different workpace with mouse left-button
@@ -173,6 +151,25 @@ inactive_brightness = 0.600000
 keyboard_interaction = true
 offset = 10
 transition_length = 300
+
+# Show windows of current workspace or entire desktop
+[scale]
+# cycle through windows with arrow keys or wm-actions.send_to_back
+toggle = <super> key_z
+toggle_all = <super> key_a
+allow_zoom = false
+# bg_color = \#1a1a1ae6
+duration = 400
+inactive_alpha = 0.50000
+include_minimized = false
+interact = false
+middle_click_close = false
+minimized_alpha = 0.4000
+spacing = 50
+text_color = \#ccccccff
+title_font_size = 22
+title_overlay = all
+title_position = center
 
 # Switch to the next output.
 [oswitch]
