add unused plugins, fix typo readme

--- a/wayfire.ini
+++ b/wayfire.ini
@@ -5,9 +5,9 @@
 #───────────────────────────────────────────────────────────────
 
 [core]
-plugins = alpha animate autostart autostart-static command pixdecor expo fast-switcher grid idle invert move oswitch place resize switcher vswitch window-rules wm-actions background-view blur cube decoration follow-focus foreign-toplevel ipc ipc-rules join_views mag scale shortcuts-inhibit water wf-info winshadows winzoom wobbly workspace-names wrot wsets zoom 
+plugins = alpha animate autostart autostart-static command pixdecor expo fast-switcher grid idle invert move oswitch place resize switcher vswitch window-rules wm-actions background-view blur cube decoration follow-focus join_views mag scale shortcuts-inhibit water wf-info winshadows winzoom wobbly workspace-names wrot wsets zoom 
 # simple-tile 
-plugins_nogl = alpha animate autostart autostart-static command pixdecor expo fast-switcher grid idle move oswitch place resize switcher vswitch window-rules wm-actions background-view blur cube decoration follow-focus foreign-toplevel ipc ipc-rules join_views mag scale shortcuts-inhibit water wf-info winshadows winzoom wobbly workspace-names wrot wsets zoom 
+plugins_nogl = alpha animate autostart autostart-static command pixdecor expo fast-switcher grid idle move oswitch place resize switcher vswitch window-rules wm-actions background-view blur cube decoration follow-focus join_views mag scale shortcuts-inhibit water wf-info winshadows winzoom wobbly workspace-names wrot wsets zoom 
 xwayland = true
 only_decorate_gtk = true
 # focus_buttons_passthrough = true
@@ -57,9 +57,9 @@ screensaver_timeout = 120
 # dpms_timeout = -1
 dpms_timeout = 240
 toggle = <super> <shift> KEY_Z
-cube_max_zoom = 1.500000
-cube_rotate_speed = 1.000000
-cube_zoom_speed = 1000
+cube_max_zoom = 1.8
+cube_rotate_speed = 1.5
+cube_zoom_speed = 2000
 disable_on_fullscreen = false
 disable_initially = false
 
@@ -73,7 +73,7 @@ toggle_showdesktop = <super> <shift> KEY_D
 toggle_always_on_top = <super> KEY_Y
 toggle_sticky = <super> <shift> KEY_Y
 # Switch between windows (without animation)
-# However, cycles through windows of all workspaces on row
+# Cycles focus through windows of all workspaces on row, kind of annoying
 send_to_back = <super> KEY_S | <super> KEY_B
 ## Alt-Esc is the default binding for moving between windows/tiles on a single workspace
 
@@ -96,7 +96,7 @@ type = crossfade
 [window-rules]
 maximize_alacritty = on created if app_id is "Alacritty" then maximize
 maximize_lxterminal= on created if app_id is "lxterminal" then maximize
-rule_001 = on created if app_id is "lxterminal" then set alpha 0.6
+rule_001 = on created if app_id is "lxterminal" then set alpha 0.9
 rule_002 = on created if app_id is "Alacritty" then set alpha 0.6
 rule_003= on created if app_id is "firefox" then maximize
 rule_004= on created if app_id is "firefox" then set alpha 0.7
@@ -323,6 +323,18 @@ focus_delay = 50
 raise_on_top = true
 threshold = 10
  
+[join-views]
+
+[keycolor]
+color = \#000000FF
+opacity = 0.250000
+threshold = 0.500000
+
+[mag]
+default_height = 500
+toggle = <alt> <super> KEY_M
+zoom_level = 75
+
 # Unused  ───────────────────────────────────────────────────────────────
 
 # [input]
@@ -364,3 +376,22 @@ threshold = 10
 # key_focus_below = <super> <alt> KEY_J
 # key_focus_left = <super> <alt> KEY_H | <super> KEY_U
 # key_focus_right = <super> <alt> KEY_L | <super> KEY_P
+
+
+# [input-device]
+# output = 
+
+# [hide-cursor]
+# hide_delay = 2000
+# toggle = <ctrl> <super> KEY_H
+#
+# [hinge]
+# filename = /sys/bus/iio/devices/iio:device1/in_angl0_raw
+# flip_degree = 180
+# poll_freq = 200
+
+# [extra-gestures]
+# close_fingers = 20
+# move_delay = 500
+# move_fingers = 3
+
